// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `<div class="win-tabbar win-tabbar--fixed"></div>`;

exports[`placeholder prop 1`] = `
<div class="win-tabbar__placeholder" style="height: 50px;">
  <div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed"></div>
</div>
`;

exports[`route mode 1`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 2`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode 3`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 1`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`route mode match by name 2`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">
      Tab
    </div>
  </div>
</div>
`;

exports[`watch tabbar value 1`] = `
<div class="win-hairline--top-bottom win-tabbar win-tabbar--fixed">
  <div class="win-tabbar-item">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">Tab</div>
  </div>
  <div class="win-tabbar-item win-tabbar-item--active">
    <div class="win-tabbar-item__icon">
      <!---->
    </div>
    <div class="win-tabbar-item__text">Tab</div>
  </div>
</div>
`;
